RESOLVED FIXED168541
Resource Load Statistics: Only scan website data store once per session ID + reinstate removal counting
https://bugs.webkit.org/show_bug.cgi?id=168541
Summary Resource Load Statistics: Only scan website data store once per session ID + ...
John Wilander
Reported 2017-02-17 17:16:06 PST
As of https://bugs.webkit.org/show_bug.cgi?id=167474 we iterate over all pages' WebsiteDataStores. Since pages share data stores we should make sure to only scan a WebsiteDataStore with a specific session ID once. https://bugs.webkit.org/show_bug.cgi?id=167474 also explicitly regressed data record removal counting. We should add it back in.
Attachments
Patch (11.49 KB, patch)
2017-02-17 17:25 PST, John Wilander
no flags
John Wilander
Comment 1 2017-02-17 17:25:06 PST
John Wilander
Comment 2 2017-02-17 17:26:38 PST
Andy, this is small a follow-up patch to https://bugs.webkit.org/show_bug.cgi?id=167474 which you reviewed.
John Wilander
Comment 3 2017-02-21 14:31:03 PST
Comment on attachment 302020 [details] Patch Thanks, Alex!
WebKit Commit Bot
Comment 4 2017-02-21 14:57:13 PST
Comment on attachment 302020 [details] Patch Clearing flags on attachment: 302020 Committed r212766: <http://trac.webkit.org/changeset/212766>
WebKit Commit Bot
Comment 5 2017-02-21 14:57:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.